
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int str_error ;


 int errno ;
 int snprintf (char*,int,char*,char const*,char*) ;
 char* strerror (int ) ;

__attribute__((used)) static const char *fmt_with_err(char *buf, int n, const char *fmt)
{
 char str_error[256], *err;
 int i, j;

 err = strerror(errno);
 for (i = j = 0; err[i] && j < sizeof(str_error) - 1; ) {
  if ((str_error[j++] = err[i++]) != '%')
   continue;
  if (j < sizeof(str_error) - 1) {
   str_error[j++] = '%';
  } else {


   j--;
   break;
  }
 }
 str_error[j] = 0;

 snprintf(buf, n, "%s: %s", fmt, str_error);
 return buf;
}
